--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,18 +6,181 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>976</width>
-    <height>696</height>
+    <width>894</width>
+    <height>572</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" rowstretch="1,0" columnstretch="1,3">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="1,1" columnstretch="1,3">
     <property name="spacing">
      <number>6</number>
     </property>
+    <item row="0" column="0">
+     <widget class="QWidget" name="model" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>14</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_2" rowstretch="1,0,0,0,0,0,0,0,0" columnstretch="2,0,0,0,0,0,0">
+       <item row="3" column="2">
+        <widget class="QPushButton" name="Minus4Seed_PushButton">
+         <property name="minimumSize">
+          <size>
+           <width>75</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>-</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="3">
+        <widget class="QPushButton" name="Plus4Seed_PushButton">
+         <property name="minimumSize">
+          <size>
+           <width>75</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>+</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="Pickle_Label">
+         <property name="text">
+          <string>Pickle</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1" colspan="2">
+        <widget class="QLineEdit" name="StepSize_LineEdit"/>
+       </item>
+       <item row="6" column="2">
+        <widget class="QCheckBox" name="Wp_CheckBox">
+         <property name="text">
+          <string>W+</string>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">buttonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="5" column="4" colspan="3">
+        <widget class="QLabel" name="StepSize_Label">
+         <property name="text">
+          <string>Step Size</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" colspan="6">
+        <widget class="QComboBox" name="Device_ComboBox"/>
+       </item>
+       <item row="2" column="1" colspan="2">
+        <widget class="QPushButton" name="Recent_PushButton">
+         <property name="text">
+          <string>Recent...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QCheckBox" name="W_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>W</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">buttonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="Latent_Label">
+         <property name="text">
+          <string>Latent</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="4">
+        <widget class="QLabel" name="Seed_Label">
+         <property name="text">
+          <string>Seed</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="1">
+        <widget class="QPushButton" name="Generate_PushButton">
+         <property name="text">
+          <string>Generate</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="3">
+        <widget class="QPushButton" name="Reset_PushButton">
+         <property name="text">
+          <string>Reset</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLineEdit" name="Seed_LineEdit">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>0</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="Device_Label">
+         <property name="text">
+          <string>Device</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="3" colspan="4">
+        <widget class="QPushButton" name="Browse_PushButton">
+         <property name="text">
+          <string>Browse...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="2">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="1" column="1" colspan="6">
+        <widget class="QLineEdit" name="Pickle_LineEdit">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item row="1" column="0">
      <widget class="QWidget" name="drag" native="true">
       <layout class="QGridLayout" name="gridLayout_3" columnstretch="4,4,1,1,4">
@@ -183,175 +346,8 @@
       </layout>
      </widget>
     </item>
-    <item row="0" column="0">
-     <widget class="QWidget" name="model" native="true">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-        <horstretch>14</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_2" rowstretch="1,0,0,0,0,0,0,0,0" columnstretch="2,0,0,0,0,0,0">
-       <item row="3" column="2">
-        <widget class="QPushButton" name="Minus4Seed_PushButton">
-         <property name="minimumSize">
-          <size>
-           <width>75</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>-</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="3">
-        <widget class="QPushButton" name="Plus4Seed_PushButton">
-         <property name="minimumSize">
-          <size>
-           <width>75</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>+</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="Pickle_Label">
-         <property name="text">
-          <string>Pickle</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1" colspan="2">
-        <widget class="QLineEdit" name="StepSize_LineEdit"/>
-       </item>
-       <item row="6" column="2">
-        <widget class="QCheckBox" name="Wp_CheckBox">
-         <property name="text">
-          <string>W+</string>
-         </property>
-         <attribute name="buttonGroup">
-          <string notr="true">buttonGroup</string>
-         </attribute>
-        </widget>
-       </item>
-       <item row="5" column="4" colspan="3">
-        <widget class="QLabel" name="StepSize_Label">
-         <property name="text">
-          <string>Step Size</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" colspan="6">
-        <widget class="QComboBox" name="Device_ComboBox"/>
-       </item>
-       <item row="2" column="1" colspan="2">
-        <widget class="QPushButton" name="Recent_PushButton">
-         <property name="text">
-          <string>Recent...</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="1">
-        <widget class="QCheckBox" name="W_CheckBox">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="text">
-          <string>W</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-         <attribute name="buttonGroup">
-          <string notr="true">buttonGroup</string>
-         </attribute>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="Latent_Label">
-         <property name="text">
-          <string>Latent</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="4">
-        <widget class="QLabel" name="Seed_Label">
-         <property name="text">
-          <string>Seed</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="1">
-        <widget class="QPushButton" name="Generate_PushButton">
-         <property name="text">
-          <string>Generate</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="3">
-        <widget class="QPushButton" name="Reset_PushButton">
-         <property name="text">
-          <string>Reset</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QLineEdit" name="Seed_LineEdit">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="text">
-          <string>0</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="Device_Label">
-         <property name="text">
-          <string>Device</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="3" colspan="4">
-        <widget class="QPushButton" name="Browse_PushButton">
-         <property name="text">
-          <string>Browse...</string>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="2">
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="1" column="1" colspan="6">
-        <widget class="QLineEdit" name="Pickle_LineEdit">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
     <item row="0" column="1" rowspan="2">
-     <widget class="ImageLabel" name="Image_Label">
-      <property name="text">
-       <string>ImageLabel</string>
-      </property>
-     </widget>
+     <widget class="ImageWidget" name="Image_Widget" native="true"/>
     </item>
    </layout>
   </widget>
@@ -360,7 +356,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>976</width>
+     <width>894</width>
      <height>22</height>
     </rect>
    </property>
@@ -369,9 +365,10 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ImageLabel</class>
-   <extends>QLabel</extends>
-   <header location="global">components.ImageLabel</header>
+   <class>ImageWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">components.ImageWidget</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
