--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -20,18 +20,59 @@
     </property>
     <item row="2" column="0">
      <widget class="QWidget" name="experiment" native="true">
-      <layout class="QGridLayout" name="gridLayout_5" columnstretch="0,0,0,0">
-       <item row="2" column="3">
-        <widget class="QToolButton" name="TargetImage_ToolButton">
-         <property name="text">
-          <string>...</string>
+      <layout class="QGridLayout" name="gridLayout_5" columnstretch="0,0,0,0,0">
+       <item row="3" column="1">
+        <widget class="QCheckBox" name="OnePoint_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
          </property>
+         <property name="text">
+          <string>1 point</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Point_ButtonGroup</string>
+         </attribute>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="Experiment_Label">
+       <item row="4" column="4">
+        <widget class="QCheckBox" name="SevenBlock_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="text">
-          <string>Experiment</string>
+          <string>7</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Block_ButtonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QCheckBox" name="FourBlock_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>4</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Block_ButtonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QPushButton" name="SaveExperiment_PushButton">
+         <property name="text">
+          <string>Save</string>
          </property>
         </widget>
        </item>
@@ -42,25 +83,107 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="1" colspan="2">
+       <item row="5" column="1">
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="1" colspan="3">
         <widget class="QLineEdit" name="TargetImage_LineEdit">
          <property name="enabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="0" column="2">
+       <item row="0" column="0">
+        <widget class="QLabel" name="Experiment_Label">
+         <property name="text">
+          <string>Experiment</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="3">
+        <widget class="QCheckBox" name="SixBlock_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>6</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Block_ButtonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="2" column="4">
+        <widget class="QToolButton" name="TargetImage_ToolButton">
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="LatentBlock_Label">
+         <property name="text">
+          <string>Latent Block</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
         <widget class="QPushButton" name="Test_PushButton">
          <property name="text">
           <string>Test</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
-        <widget class="QPushButton" name="SaveExperiment_PushButton">
-         <property name="text">
-          <string>Save</string>
+       <item row="4" column="2">
+        <widget class="QCheckBox" name="FiveBlock_CheckBox">
+         <property name="enabled">
+          <bool>true</bool>
          </property>
+         <property name="text">
+          <string>5</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Block_ButtonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="3" column="2">
+        <widget class="QCheckBox" name="FivePoints_CheckBox">
+         <property name="text">
+          <string>5 points</string>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Point_ButtonGroup</string>
+         </attribute>
+        </widget>
+       </item>
+       <item row="3" column="3">
+        <widget class="QCheckBox" name="SixtyEightPoints_CheckBox">
+         <property name="text">
+          <string>68 points</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">Point_ButtonGroup</string>
+         </attribute>
         </widget>
        </item>
       </layout>
@@ -108,7 +231,7 @@
           <string>W+</string>
          </property>
          <attribute name="buttonGroup">
-          <string notr="true">buttonGroup</string>
+          <string notr="true">LatentSpace_ButtonGroup</string>
          </attribute>
         </widget>
        </item>
@@ -127,7 +250,7 @@
           <bool>true</bool>
          </property>
          <attribute name="buttonGroup">
-          <string notr="true">buttonGroup</string>
+          <string notr="true">LatentSpace_ButtonGroup</string>
          </attribute>
         </widget>
        </item>
@@ -477,19 +600,6 @@
       </layout>
      </widget>
     </item>
-    <item row="3" column="0">
-     <spacer name="verticalSpacer_4">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -515,6 +625,12 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup"/>
+  <buttongroup name="LatentSpace_ButtonGroup"/>
+  <buttongroup name="Block_ButtonGroup">
+   <property name="exclusive">
+    <bool>true</bool>
+   </property>
+  </buttongroup>
+  <buttongroup name="Point_ButtonGroup"/>
  </buttongroups>
 </ui>
